# python-gatenlp

./: .coveragerc  .gitignore  .prospector.yaml  .pylintrc  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVNOTES.md  LICENSE  README.md  coveragerc  create-requirements.sh  debug_htmlviewer.ipynb  debug_readfromgate.py  debugmodule1.py  gendoc-pdoc3.sh  gendoc.sh  make-java.py  make-requirements.py  make-viewer.py  make.sh  mkdocs.yml  pyproject.toml  requirements-all.txt  requirements-github.txt  requirements.txt  requirements_all.txt  requirements_all_dev.txt  setup.cfg  setup.py  setup_defs.py  test-doc1.gate_sj  test_gate.py  tox.ini
benchmark/: loadsave.py
debug/: Debug1_filterannsets.ipynb  Untitled.ipynb  ar-ud-train-small.conllu  conll1.txt  conllu01.conllu  conllu02.conllu  conllu03.conllu  debug-annset-overlap.py  debug-chunking.ipynb  debug-conll2003-xml2bdojs.ipynb  debug-docedit.ipynb  debug-elg.ipynb  debug-filteranns.ipynb  debug-gateworker01.ipynb  debug-gatexml.xml  debug-gazetter-string.ipynb  debug-gazetter-token.ipynb  debug-gazetter.ipynb  debug-googlenlp.ipynb  debug-html-viewer.ipynb  debug-htmlviewer-i120.ipynb  debug-ibm.ipynb  debug-load-gatexml.ipynb  debug-pampac-issue137.ipynb  debug-pampac-issue137b.ipynb  debug-pampac-issue138.ipynb  debug-pampac-nested.ipynb  debug-pampac-seq.ipynb  debug-pampac.ipynb  debug-perspective.ipynb  debug-pyodide.py  debug-rewire.ipynb  debug-spacy.ipynb  debug-splittokenizer.ipynb  debug-stringgaz01.ipynb  debug-tokenizers.ipynb  debug-twitter.ipynb  debug-viewer-init.ipynb  (+12 more)
docs/: _config.yml  (+84 more)
(+438 files in other folders)
