[metadata]
# see https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[aliases]
test = pytest

[tool:pytest]
addopts = 
     -s -v 
     --cov gatenlp 
     --cov-report term-missing
norecursedirs = 
  dist
  build
  docs
  benchmark
  build
  examples
  html-ann-viewer
  java
  sphinx-config
  tmp-doc-html
  tmp-doc-sphinx
