[metadata]
# see https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[aliases]
test = pytest

[tool:pytest]
log_cli=true
log_cli_level=WARN
addopts = -r A
#addopts = -s
#addopts = 
#     -s -v 
#     --cov gatenlp 
#     --cov-report term-missing
norecursedirs = 
  dist
  build
  docs
  benchmark
  build
  examples
  html-ann-viewer
  java
  sphinx-config
  tmp-doc-html
  tmp-doc-sphinx

[flake8]
max-line-length = 127
ignore = E402, W503

[pycodestyle]
max-line-length = 127
ignore = E402, W503

[mypy]
warn_unused_ignores = True
